[package]
name = "linux-kernel-crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.153"
itertools = "0.12.1"
crypto = { version = "0.5.1", optional = true, features = ["aead", "cipher", "digest", "rand_core", "std"] }

[features]
default = [
    "crypto-traits",
]
crypto-traits = ["dep:crypto"]

[dev-dependencies]
sha2 = "0.10.8"
