[package]
name = "linux-kernel-crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.153"
itertools = "0.12.1"
crypto = { version = "0.5.1", optional = true, features = ["aead", "cipher", "digest", "rand_core", "std"] }
rand = { version = "0.8.5", optional = true }

[features]
default = [
    "crypto-traits",
    "rand-traits",
]
crypto-traits = ["dep:crypto"]
rand-traits = ["dep:rand"]

[dev-dependencies]
sha2 = "0.10.8"
